# ogva-core

./: CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  libogvaconsensus.pc.in
contrib/: README.md  install_db4.sh  ogva-cli.bash-completion  ogva-qt.pro  ogva-tx.bash-completion  ogvad.bash-completion  valgrind.supp
depends/: README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  instantsend.md  managing-wallets.md  masternode-budget.md  multiprocess.md  ogva-conf.md  productivity.md  reduce-memory.md  reduce-traffic.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  ogva-cli.1  ogva-qt.1  ogva-tx.1  ogva-wallet.1  ogvad.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  amount.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind.cpp  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  devfee_payment.cpp  devfee_payment.h  hash.h  init.h  (+21 more)
(+330 files in other folders)
